tests/baselines/reference/tsxAttributeResolution6.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(10,8): error TS2322: Type 'boolean' is not assignable to type 'string'.
file.tsx(11,8): error TS2322: Type 'string' is not assignable to type 'boolean'.
file.tsx(12,2): error TS2741: Property 'n' is missing in type '{}' but required in type '{ n: boolean; }'.


==== file.tsx (4 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		test1: { n?: boolean; s?: string};
    		test2: { n: boolean; };
    	}
    }
    
    // Error
    <test1 s />;
           ~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
!!! related TS6500 file.tsx:4:25: The expected type comes from property 's' which is declared here on type '{ n?: boolean; s?: string; }'
    <test1 n='true' />;
           ~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
!!! related TS6500 file.tsx:4:12: The expected type comes from property 'n' which is declared here on type '{ n?: boolean; s?: string; }'
    <test2 />;
     ~~~~~
!!! error TS2741: Property 'n' is missing in type '{}' but required in type '{ n: boolean; }'.
!!! related TS2728 file.tsx:5:12: 'n' is declared here.
    
    // OK
    <test1 n />;
    <test1 n={false} />;
    <test2 n />;
    